--- a/css/site.css
+++ b/css/site.css
@@ -1,20 +1,20 @@
 html {
+    height: 100%;
     font-family: Verdana, Arial, Helvetica, sans-serif;
     font-size: 20px;
-    height: 100%;
 }
 
 body {
+    background-color: #DAC996;
     display:flex; 
     flex-direction:column; 
-    background-color: #DAC996;
 }
 
 nav {
-    background-color: #ffcc33;
+    background-color: #FFD042;
     padding: 10px;
-    width: 100%;
     position: sticky !important;
+    width: 100%;
 }
 
 #banner {
@@ -29,9 +29,10 @@ nav {
 }
 
 .nav-item {
+    color: #003975;
+    text-align: center;
     font-size: 1em;
     font-weight: 700;
-    text-align: center;
     transition-property: all;
     transition-duration: 1s;
     transition-timing-function: linear;
@@ -39,46 +40,61 @@ nav {
     -webkit-transition-property: 1s;
     -webkit-transition-property: linear;
 }
-
-.nav-item:hover {
-    color:#1F19F3;
+a {
+    color: #003975;
+}
+.nav-item:hover, a:hover {
     background-color: #AEB8E4;
     border-radius: 10px;
+    color:#0D089B;
 }
 
 section {
-    text-align: center;
     margin-bottom: 10px;
+    text-align: center;
 }
 
 h2 {
     background-color: #E9A81E;
     margin: 5px;
     padding: 5px;
+    font-size: 2em;
+}
+
+h3 {
+    font-size: 1.5em;
 }
 
 p {
-    text-align: justify;
     padding: 10px;
+    text-align: justify;
 }
 
 #contactUsForm, article {
-    width: 500px;
-    margin: 0 auto;
     background: #FFFFFF;
-    padding: 5px;
     border: 1px solid #AEB8E4;
     border-radius: 10px; 
+    margin: 0 auto;
+    padding: 5px;
+    width: 500px;
 }
 
 #contactUsForm .form-group {
     text-align: left;
 }
 
+#contactUsForm .btn {
+    background-color: #004C9E;
+}
+
+.help {
+    color: #FF0000;
+    font-size: 16px;
+}
 footer {  
-    margin-top:auto; 
-    bottom: 0;  
-    width: 100%;
-    text-align: center;
     background: #AEB8E4;
+    bottom: 0;  
+    margin-top:auto; 
+    text-align: center;
+    width: 100%;
 }
