--- a/css/site.css
+++ b/css/site.css
@@ -1,7 +1,7 @@
 html {
     height: 100%;
     font-family: Verdana, Arial, Helvetica, sans-serif;
-    font-size: 20px;
+    font-size: 0.5cm;
 }
 
 body {
