--- a/css/site.css
+++ b/css/site.css
@@ -166,3 +166,19 @@ footer {
     text-align: center;
     width: 100%;
 }
+
+@media (max-width: 767px) { 
+    html {
+        height: 100%;
+        font-family: Verdana, Arial, Helvetica, sans-serif;
+        font-size: 1.0cm !important;
+    }
+}
+ 
+@media (max-width: 480px) { 
+    html {
+        height: 100%;
+        font-family: Verdana, Arial, Helvetica, sans-serif;
+        font-size: 1.2cm !important;
+    }
+}
