--- a/css/site.css
+++ b/css/site.css
@@ -185,8 +185,8 @@ footer {
     }
 }
 
-/* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {
+/* Medium devices (landscape tablets, 992px and down) */
+@media only screen and (max-width: 768px) {
     html {
         height: 100%;
         font-family: Verdana, Arial, Helvetica, sans-serif;
